Finalización de Blog CSS

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
     </section>
     <!--Pie de página-->
     <footer>
+        <section>
         <!--href generalmente tiene el link del correo pero este truco
         "mailto:" permite enviar al correo de la computadora y lo 
         proporciona directamente a lo que va después del punto-->
         <a href="#titulo">Ven al Inicio</a>
         <a href="mailto:addrriel@hotmail.com">Envíame un mensaje</a>
+    </section>
         <p>Copyright 2024</p>
     </footer>
 </body>
